tests/compile_fail/multiple_conflicts.stderr
error: Key path conflict: 'app' cannot have both direct value and nested fields
  --> tests/compile_fail/multiple_conflicts.rs:3:1
   |
3  | / config! {
4  | |     MultipleConflictConfig => {
5  | |         app: bool,
6  | |         app.name: String,
...  |
11 | | }
   | |_^
   |
   = note: this error originates in the macro `config` (in Nightly builds, run with -Z macro-backtrace for more info)
